--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,10 @@ android {
             // viewBinding = true
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -145,5 +149,11 @@ dependencies {
 
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
+
+    //unit testing
+    //mockk
+    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7"
 
 }
